# guard-proxy

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  nightly.yml  weekly-ioc-sync.yml  weekly-popular-update.yml
app/: main.py  notifications.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py
app/dashboard/: index.html
app/db/: advisory_sync.py  audit_service.py  cache_service.py  datadog_sync.py  session.py
app/decision/: engine.py
app/proxy/: base.py  cargo.py  go.py  middleware.py  npm.py  pypi.py  rubygems.py
app/registry/: cargo_client.py  depsdev_client.py  go_client.py  npm_client.py  pypi_client.py  rubygems_client.py
app/rules/: manager.py
app/sbom/: generator.py
app/scanners/: advisory_scanner.py  ast_scanner.py  background.py  base.py  cooldown.py  dependency_scanner.py  heuristics_scanner.py  ioc_checker.py  license_scanner.py  maintainer_scanner.py  metadata_scanner.py  reachability_scanner.py  static_analysis.py  static_analysis_cargo.py  static_analysis_go.py  static_analysis_pypi.py  static_analysis_rubygems.py  yara_scanner.py
app/schemas/: decision.py  package.py  scan.py
app/utils/: hash.py  install_hooks.py  tarball.py
cli/: main.py
data/: known_malicious.json  popular_packages.json
data/llm_prompts/: npm_analysis.txt  pypi_analysis.txt  rubygems_analysis.txt
data/yara_rules/: supply_chain.yar
deployment/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ja.md  CONFIG_REFERENCE.md  CONFIG_REFERENCE_ja.md  DESIGN_DECISIONS.md  DESIGN_DECISIONS_ja.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ja.md  LLM_SETUP_GUIDE.md  LLM_SETUP_GUIDE_ja.md
scripts/: update_popular_packages.py
tests/: conftest.py  test_notifications.py
tests/test_api/: test_routers.py
tests/test_benchmark/: test_cargo_detection.py  test_datadog_dataset.py  test_detection_categories.py  test_false_positives.py  test_go_detection.py  test_guarddog_coverage.py  test_guarddog_go_rubygems.py  test_incident_tracking.py  test_malicious_detection.py  test_osptrack_categories.py  test_osptrack_dataset.py  test_osptrack_full_dataset.py  test_osptrack_full_pipeline.py  test_ossf_dataset.py  test_ossf_patterns.py
tests/test_db/: test_cache_service.py
tests/test_decision/: test_engine.py
tests/test_proxy/: test_go.py  test_npm.py  test_pypi.py  test_rubygems.py  test_single_port.py
tests/test_registry/: test_depsdev_client.py  test_go_client.py  test_npm_client.py
tests/test_rules/: test_manager.py
tests/test_sbom/: test_generator.py
tests/test_scanners/: test_advisory_scanner.py  test_ast_scanner.py  test_background.py  test_cooldown.py  test_dependency_scanner.py  test_detection_hardening.py  test_heuristics_scanner.py  test_ioc_checker.py  test_license_scanner.py  test_maintainer_scanner.py  test_metadata_scanner.py  test_reachability_scanner.py  test_static_analysis.py  test_static_analysis_cargo.py  test_static_analysis_go.py  test_static_analysis_pypi.py  test_static_analysis_rubygems.py  test_tiered_pipeline.py  test_yara_scanner.py
tests/test_utils/: test_cargo_extraction.py  test_gem_extraction.py  test_go_extraction.py  (+3 more)
(+28 files in other folders)
